--- a/ChirpRadio-Info.plist
+++ b/ChirpRadio-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>icon.png</string>
+	<string>app-icon-57.png</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.thejohnny.chirpradio</string>
 	<key>CFBundleInfoDictionaryVersion</key>
