--- a/ChirpRadio-Info.plist
+++ b/ChirpRadio-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>app-icon-57.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.thejohnny.chirpradio</string>
+	<string>org.chicagoindependentradio.chirpradio-v1</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -21,6 +21,8 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
+	<string>1.0</string>
+	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
